--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  a {
-    @apply text-orange-500;
-  }
+body {
+    color: ghostwhite;
+    background: #121212;
 }
 
 @layer utilities {
-  .text-bigger-hello {
-    @apply text-3xl font-semibold;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+@layer base {
+    a {
+        @apply text-green-500;
+    }
 }
 
 @layer components {
-  .primary-btn {
-    @apply w-full bg-orange-500 text-white  font-medium  rounded-md text-center hover:bg-orange-400 transition-colors;
-  }
+    .primary-button {
+        @apply hover:bg-green-600 transition-colors w-full text-lg  bg-green-500 rounded-md text-center text-[#eee];
+    }
 }
